--- a/RiskofRain2Database/src/main/java/jodicelukeendicott/riskofrain2database/GameItemSelectionWin.form
+++ b/RiskofRain2Database/src/main/java/jodicelukeendicott/riskofrain2database/GameItemSelectionWin.form
@@ -33,8 +33,8 @@
                   <Component id="jbtnTglGreen" max="32767" attributes="0"/>
                   <Component id="jbtnTglRed" max="32767" attributes="0"/>
                   <Component id="jbtnTglBoss" max="32767" attributes="0"/>
-                  <Component id="jbtnInfo" max="32767" attributes="0"/>
-                  <Component id="jButton1" min="-2" pref="112" max="-2" attributes="0"/>
+                  <Component id="jbtnTglLunar" max="32767" attributes="0"/>
+                  <Component id="jbtngetinfo" min="-2" pref="112" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
           </Group>
@@ -57,9 +57,9 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jbtnTglBoss" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jbtnInfo" min="-2" max="-2" attributes="0"/>
+                      <Component id="jbtnTglLunar" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jButton1" min="-2" pref="59" max="-2" attributes="0"/>
+                      <Component id="jbtngetinfo" min="-2" pref="59" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace pref="32" max="32767" attributes="0"/>
@@ -87,12 +87,12 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="jbtngetinfo">
       <Properties>
         <Property name="text" type="java.lang.String" value="Get Item Info"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtngetinfoActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JToggleButton" name="jbtnTglAll">
@@ -100,31 +100,49 @@
         <Property name="selected" type="boolean" value="true"/>
         <Property name="text" type="java.lang.String" value="All Items"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnTglAllActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JToggleButton" name="jbtnTglWhite">
       <Properties>
         <Property name="text" type="java.lang.String" value="White Items"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnTglWhiteActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JToggleButton" name="jbtnTglGreen">
       <Properties>
         <Property name="text" type="java.lang.String" value="Green Items"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnTglGreenActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JToggleButton" name="jbtnTglRed">
       <Properties>
         <Property name="text" type="java.lang.String" value="Red Items"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnTglRedActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JToggleButton" name="jbtnTglBoss">
       <Properties>
         <Property name="text" type="java.lang.String" value="Boss Items"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnTglBossActionPerformed"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JToggleButton" name="jbtnInfo">
+    <Component class="javax.swing.JToggleButton" name="jbtnTglLunar">
       <Properties>
         <Property name="text" type="java.lang.String" value="Lunar Items"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnTglLunarActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
