--- a/RiskofRain2Database/src/main/java/jodicelukeendicott/riskofrain2database/GameItemSelectionWin.form
+++ b/RiskofRain2Database/src/main/java/jodicelukeendicott/riskofrain2database/GameItemSelectionWin.form
@@ -27,8 +27,8 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jScrollPane1" max="32767" attributes="0"/>
-                      <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                      <Component id="jScrollPane1" pref="444" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="56" max="-2" attributes="0"/>
@@ -41,12 +41,11 @@
               <Group type="103" groupAlignment="0" max="-2" attributes="0">
                   <Component id="jbtnTglother" max="32767" attributes="0"/>
                   <Component id="jbtnTglAll" max="32767" attributes="0"/>
-                  <Component id="jbtnTglgreen" max="32767" attributes="0"/>
+                  <Component id="jbtnTglgreen" pref="100" max="32767" attributes="0"/>
                   <Component id="jbtnTglwhite" alignment="0" max="32767" attributes="0"/>
                   <Component id="jbtnTglred" alignment="0" max="32767" attributes="0"/>
                   <Component id="jbtnTglboss" max="32767" attributes="0"/>
                   <Component id="jbtnTgllunar" max="32767" attributes="0"/>
-                  <Component id="jlblimg" max="32767" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
           </Group>
@@ -80,11 +79,9 @@
                       <Component id="jbtnTgllunar" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jbtnTglother" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
-                      <Component id="jlblimg" min="-2" pref="113" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="33" max="32767" attributes="0"/>
+              <EmptySpace pref="31" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -184,18 +181,6 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
       </Events>
-    </Component>
-    <Component class="javax.swing.JLabel" name="jlblimg">
-      <Properties>
-        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="ff" green="ff" red="ff" type="rgb"/>
-        </Property>
-        <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-          <Border info="org.netbeans.modules.form.compat2.border.BevelBorderInfo">
-            <BevelBorder/>
-          </Border>
-        </Property>
-      </Properties>
     </Component>
   </SubComponents>
 </Form>
