--- a/RiskofRain2Database/src/main/java/jodicelukeendicott/riskofrain2database/SurvivorWin.form
+++ b/RiskofRain2Database/src/main/java/jodicelukeendicott/riskofrain2database/SurvivorWin.form
@@ -61,7 +61,6 @@
                       <EmptySpace max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
-                      <EmptySpace max="32767" attributes="0"/>
                       <Component id="jLabel14" min="-2" pref="257" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="87" max="-2" attributes="0"/>
                       <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
@@ -321,23 +320,27 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="ability3panel" alignment="0" max="32767" attributes="0"/>
-                      <Component id="ability4panel" alignment="0" max="32767" attributes="0"/>
-                      <Component id="ability1panel" alignment="0" pref="818" max="32767" attributes="0"/>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="lblability3type" alignment="0" min="-2" pref="130" max="-2" attributes="0"/>
                               <Component id="lblability4type" alignment="0" min="-2" pref="130" max="-2" attributes="0"/>
-                              <Component id="ability2panel" min="-2" max="-2" attributes="0"/>
                               <Component id="lblability2type" min="-2" pref="130" max="-2" attributes="0"/>
                               <Component id="lblability1type" alignment="0" min="-2" pref="130" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          <EmptySpace min="830" max="32767" attributes="0"/>
+                      </Group>
+                      <Group type="102" attributes="0">
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="ability3panel" alignment="0" max="32767" attributes="0"/>
+                              <Component id="ability4panel" alignment="0" max="32767" attributes="0"/>
+                              <Component id="ability1panel" alignment="0" pref="950" max="32767" attributes="0"/>
+                              <Component id="ability2panel" alignment="0" max="32767" attributes="0"/>
+                          </Group>
+                          <EmptySpace max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace min="-2" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -348,8 +351,8 @@
                   <Component id="lblability1type" min="-2" pref="32" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="ability1panel" min="-2" pref="120" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
-                  <Component id="lblability2type" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Component id="lblability2type" min="-2" pref="32" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="ability2panel" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -478,7 +481,7 @@
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace pref="677" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
